objects/bofc__Login_Details__c.object
<CustomObject>
    <fields>
        <fullName>bofc__Current_Org__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Org</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bofc__Instance_Name__c</fullName>
        <label>Instance Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Instance_URL__c</fullName>
        <label>Instance URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__IsSandbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSandbox?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bofc__Token__c</fullName>
        <label>Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__csId__c</fullName>
        <label>csId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__pwd__c</fullName>
        <label>pwd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Login Details</label>
    <nameField>
        <label>Login Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Login Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>